# aiocortex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aio_cortex/: __init__.py  exceptions.py
src/aio_cortex/files/: manager.py  yaml_editor.py
src/aio_cortex/git/: __init__.py  cleanup.py  filters.py  manager.py  sync.py
src/aio_cortex/instructions/docs/: 00_overview.md  01_explain_before_executing.md  02_output_formatting.md  03_critical_safety.md  04_dashboard_generation.md  05_api_summary.md  06_conditional_cards.md  99_final_reminder.md
src/aio_cortex/models/: __init__.py  common.py  config.py  files.py  git.py
src/aiocortex/: __init__.py  exceptions.py
src/aiocortex/files/: __init__.py  manager.py  yaml_editor.py
src/aiocortex/git/: __init__.py  cleanup.py  filters.py  manager.py  sync.py
src/aiocortex/instructions/: __init__.py
src/aiocortex/instructions/docs/: 01_explain_before_executing.md  02_output_formatting.md  04_dashboard_generation.md  05_api_summary.md  99_final_reminder.md
src/aiocortex/models/: __init__.py  common.py  config.py  files.py  git.py
tests/: conftest.py  test_instructions.py
tests/files/: test_manager.py  test_yaml_editor.py
tests/git/: test_cleanup.py  test_filters.py  test_manager.py  test_sync.py
tests/models/: test_models.py
